--- a/package.json
+++ b/package.json
@@ -10,6 +10,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.16.0"
-  }
+    "cypress": "^13.16.0",
+    "mocha": "^10.8.2",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0"
+  },
+  "dependencies": {
+    "cucumber": "^6.0.7",
+    "cypress-cucumber-preprocessor": "^4.3.1",
+    "save-dev": "0.0.1-security"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true, 
+    "step_definitions": "cypress/e2e/cucumber/Tests"
+ }
+ 
 }
